2009-05-06  Alberto Garcia  <agarcia@igalia.com>

	* hildon/hildon-app-menu.c (hildon_app_menu_init):
	Don't make the menu a modal window, it causes strange interactions
	with the pointer grab and it's not really needed.

	Fixes: NB#105529 (Empty App menu is launched in a scenario.)

2009-05-06 Alejandro Pinheiro <apinheiro@igalia.com>

	* hildon/hildon-touch-selector.[ch]
	(hildon_touch_selector_optimal_size_request): function added to get a
	optimal size request from the touch selector, when you want a dialog to
	show as much of the selector
	* hildon/hildon-picker-dialog.c:
	Removed HILDON_TOUCH_SELECTOR_HEIGHT macro
	(hildon_app_menu_class_init):
	New "max-height-landscape" and "max-height-portrait" style properties
	(hildon_picker_dialog_size_request): redefined GtkWidget::size_request
	(hildon_picker_dialog_get_max_height): returns the maximum height using
	the style properties defined and checking the current portrait/landscape
	status
	(_hildon_picker_dialog_set_selector): removed the set_size_request

	Fixes: NB#109369 (Hard-coded height in HildonPickerDialog)

2009-05-06  Claudio Saavedra  <csaavedra@igalia.com>

	* hildon/hildon-bread-crumb-trail.c:
	* hildon/hildon-bread-crumb.c:
	* hildon/hildon-seekbar.c:
	Add reference to replacements for these deprecated widgets.

	Fixes: MB#4461 (Documentation: All deprecations should mention
	replacements)

2009-05-06 Alejandro Pinheiro <apinheiro@igalia.com>

	* examples/hildon-remote-texture-example.c

	Change the include to the hildon-remote-texture in order to compile
	properly the examples on the installed libhildon1-examples package

2009-05-05  Claudio Saavedra  <csaavedra@igalia.com>

	* tests/Makefile.am: Add check for HildonPickerButton.
	* tests/check-hildon-picker-button.c (fx_setup), (fx_teardown),
	(START_TEST), (create_hildon_picker_button_suite): Add three simple
	checks for the HildonPickerButton.
	* tests/check_test.c (configure_tests): Add the test suite.
	* tests/test_suites.h: likewise.
